--- a/src/json/Project.json
+++ b/src/json/Project.json
@@ -31,8 +31,7 @@
           "使い続けられるポートフォリオを作る"
         , "Webページ制作の練習をする"
       ],
-      "src": "Portfolio.png",
-      "URL": "https://github.com/itojun-1230/PicShare"
+      "src": "Portfolio.png"
     },
     {
       "name": "JavaScriptノート",
